objects/ReportFieldDescribe__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>EndDate_TEXT_ID__c</fullName>
        <label>EndDate_TEXT_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ref_CustomerContactPerson_ID__c</fullName>
        <label>Ref_CustomerContactPerson_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ref_UnitBody_ID__c</fullName>
        <label>Ref_UnitBody_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReportID__c</fullName>
        <label>ReportId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResponcedBy_ID__c</fullName>
        <label>ResponcedBy_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StartDate_TEXT_ID__c</fullName>
        <label>StartDate_TEXT_ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>ReportFieldDescribe</label>
</CustomObject>